--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ font-display: swap;
 
 /*общий шрифт*/
 body {
-font-family: "Rubik", "Helvetica", sans-serif;
+font-family: "Rubik", "Tahoma", sans-serif;
 font-size: 18px;
 line-height: 30px;
 padding: 0;
